UI enhanced for weekly weather

--- a/src/App.css
+++ b/src/App.css
@@ -124,6 +124,30 @@ ul.cityList {
   height: 5rem;
   border: solid 0.5rem #000000;
 }
+.rw-today {
+  display: flex;
+  border-bottom: 1px solid blanchedalmond;
+}
+
+.rw-day {
+  display: flex;
+  border-bottom: 1px solid blanchedalmond;
+}
+.rw-date {
+  display: flex;
+  width: 100%;
+  justify-content: flex-start;
+}
+.rw-desc{
+  display: flex;
+  width: 100%;
+  justify-content: flex-start;
+}
+.rw-range {
+  display: flex;
+  width: 100%;
+  justify-content: flex-start;
+}
 
 @keyframes App-logo-spin {
   from {
